# Zomby_antipattern_concept

./: .gitignore  CMakeLists.txt  LICENSE  README.md  WriteToConsoleListener.cpp  WriteToConsoleListener.h  main.cpp
BoozdedZomby/: BoozdedZomby.cpp  BoozdedZomby.h  main.cpp
BoozdedZomby/Impl/: BoozdedZomby.cpp  BoozdedZomby.h
Common/: Listener.h  Manager.h  ThreadJoiner.h
Common/Impl/: ProxyListener.cpp  ProxyListener.h  ThreadJoinerAsync.cpp  ThreadJoinerAsync.h  WriteToConsoleListener.cpp  WriteToConsoleListener.h
ComplexZomby/: ComplexZomby.cpp  ComplexZomby.h  DataSource.h  RandomDataSource.cpp  RandomDataSource.h
ComplexZomby/Impl/: ComplexZomby.cpp  ComplexZomby.h  RandomDataSource.cpp  RandomDataSource.h
ComplicatedZomby/: DataReceiver.h  DataSource.h  Listener.h  Manager.h  main.cpp
ComplicatedZomby/Impl/: ComplicatedZomby.cpp  ComplicatedZomby.h  RandomDataSource.cpp  RandomDataSource.h
PimplCyclic/: PimplCyclic.cpp  PimplCyclic.h  main.cpp
SimpleCyclic/: SimpleCyclic.cpp  SimpleCyclic.h  main.cpp
SimpleZomby/: SimpleZomby.cpp  SimpleZomby.h  main.cpp
SteppingZomby/: SteppingZomby.cpp  SteppingZomby.h  main.cpp
Tests/Manual/: ThreadJoinerTest.cpp
boozd/: azzio.cpp  azzio.h
boozd/azzio/: buffer.h  io_context.cpp  io_context.h  stream.h
boozd/azzio/impl/: random_stream.cpp  random_stream.h
